// Copyright (c) 2023 MASSA LABS <info@massa.net>

syntax = "proto3";

package massa.api.v1;

/*
option csharp_namespace = "Com.Massa.Api.V1";
option go_package = "github.com/massalabs/massa/api/v1;v1";
option java_multiple_files = true;
option java_package = "com.massa.api.v1";
option objc_class_prefix = "GRPC";
option php_namespace = "Com\\Massa\\Api\\V1";
option ruby_package = "Com::Massa::Api::V1";
option swift_prefix = "GRPC";
*/

// Entry for GetMipStatusResponse
message MipStatusEntry {
  // Mip info
  MipInfo mip_info = 1;
  // state id
  ComponentStateId state = 2;
}

// Same as MipInfo struct in versioning package
message MipInfo {
  string name = 1;
  uint32 version = 2;
  uint64 start = 3;
  uint64 timeout = 4;
  uint64 activation_delay = 5;
  repeated MipComponentEntry components = 6;
}

message MipComponentEntry {
  uint32 kind = 1;
  uint32 version = 2;
}

/*
// Same as MipComponent enum in versioning package
// TODO / FIXME: what about __Nonexhaustive ?
enum MipComponent {
  Component_Address = 0;
  Component_Block = 1; // Note: cannot use Block here otherwise protoc will be mad
  Component_VM = 2;
}
*/

// Same as ComponentStateId enum in versioning package
enum ComponentStateId {
  Error = 0;
  Defined = 1;
  Started = 2;
  LockedIn = 3;
  Active = 4;
  Failed = 5;
}
